--- a/app/src/main/res/values-night/themesOld.xml
+++ b/app/src/main/res/values-night/themesOld.xml
@@ -1,16 +1,24 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Test" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Base application theme. old parent: Theme.MaterialComponents.DayNight.DarkActionBar-->
+    <style name="Theme.TestOld" parent="android:Theme.Material.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
+        <!--
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/black</item>
+        -->
         <!-- Secondary brand color. -->
+        <!--
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+        -->
+        <!-- Status bar color.
+        Old:
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        -->
+        <item name="android:statusBarColor">@color/purple_200</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
